--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,22 @@
-# Use official Python 3.11 image
+# Use Python 3.11 base image
 FROM python:3.11-slim
 
 # Set working directory
 WORKDIR /app
 
-# Copy all backend files
-COPY . .
-
 # Install dependencies
+COPY requirements.txt .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-# Expose port
-EXPOSE 8000
+# Copy all backend files
+COPY . .
 
-# Run the app with gunicorn
-CMD ["gunicorn", "app:app", "--bind", "0.0.0.0:8000"]
+# Expose dynamic port for Render (default is 5000, but Render sets PORT env)
+EXPOSE 5000
+
+# Set environment variables if needed
+ENV PYTHONUNBUFFERED=1
+
+# Start the app using the dynamic PORT environment variable
+CMD ["sh", "-c", "gunicorn app:app --bind 0.0.0.0:$PORT"]
